analyzer_experimental snapshot
R=brianwilkerson@google.com, messick@google.com
BUG=

Review URL: https://codereview.chromium.org//16302002

git-svn-id: https://dart.googlecode.com/svn/branches/bleeding_edge@23515 260f80e4-7a28-3924-810f-c04153c831b5